<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Control.GameActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hungerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hungerText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toTopOf="@+id/daysText"
        app:layout_constraintEnd_toStartOf="@+id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scoreText" />

    <TextView
        android:id="@+id/hungerCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hunger"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toBottomOf="@+id/hungerText"
        app:layout_constraintStart_toEndOf="@+id/hungerText" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toTopOf="@+id/scoreCnt"
        app:layout_constraintEnd_toStartOf="@+id/countText"
        app:layout_constraintStart_toEndOf="@+id/hungerText"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toTopOf="@+id/tribbleCnt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreText"
        app:layout_constraintTop_toTopOf="@+id/scoreText"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daysText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toBottomOf="@+id/scoreCnt"
        app:layout_constraintStart_toStartOf="@+id/hungerText"
        app:layout_constraintTop_toBottomOf="@+id/hungerText" />

    <TextView
        android:id="@+id/daysCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@+id/daysText"
        app:layout_constraintStart_toEndOf="@+id/daysText" />

    <TextView
        android:id="@+id/tribbleCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/onBackground"
        app:layout_constraintBottom_toBottomOf="@+id/scoreCnt"
        app:layout_constraintEnd_toEndOf="@+id/countText"
        app:layout_constraintStart_toStartOf="@+id/countText"
        app:layout_constraintTop_toBottomOf="@+id/countText" />

    <TextView
        android:id="@+id/scoreCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/onBackground"
        app:layout_constraintEnd_toEndOf="@+id/scoreText"
        app:layout_constraintStart_toStartOf="@+id/scoreText"
        app:layout_constraintTop_toBottomOf="@+id/scoreText" />

    <edu.sdsmt.stopthetribblesfinnryan.View.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/eatBtn"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreCnt" />

    <Button
        android:id="@+id/dayBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:background="?attr/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="newDay"
        android:text="@string/newDay"
        android:textColor="?attr/onPrimary"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintEnd_toStartOf="@+id/eatBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eatBtn"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/eatBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:background="?attr/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="eat"
        android:text="@string/eat"
        android:textColor="?attr/onPrimary"
        app:layout_constraintBottom_toTopOf="@+id/distractBtn"
        app:layout_constraintEnd_toStartOf="@+id/collectBtn"
        app:layout_constraintStart_toEndOf="@+id/dayBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/collectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="collect"
        android:text="@string/collect"
        android:textColor="?attr/onPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/distractBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eatBtn"
        app:layout_constraintTop_toTopOf="@+id/eatBtn" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="?attr/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="?attr/onPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/distractBtn"
        app:layout_constraintEnd_toStartOf="@+id/distractBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/dayBtn"
        app:layout_constraintTop_toBottomOf="@+id/dayBtn" />

    <Button
        android:id="@+id/distractBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="distract"
        android:text="@string/distract"
        android:textColor="?attr/onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/eatBtn"
        app:layout_constraintStart_toEndOf="@+id/resetBtn"
        app:layout_constraintTop_toBottomOf="@+id/eatBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>